--- a/.env
+++ b/.env
@@ -5,13 +5,13 @@ DOMAIN=localhost
 # Environment: local, staging, production
 ENVIRONMENT=local
 
-PROJECT_NAME="Full Stack FastAPI Project"
-STACK_NAME=full-stack-fastapi-project
+PROJECT_NAME="Chell"
+STACK_NAME=chell-project
 
 # Backend
-BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://localhost.tiangolo.com"
+BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173"
 SECRET_KEY=changethis
-FIRST_SUPERUSER=admin@example.com
+FIRST_SUPERUSER=contact@bankichain.com
 FIRST_SUPERUSER_PASSWORD=changethis
 USERS_OPEN_REGISTRATION=False
 
@@ -31,7 +31,7 @@ POSTGRES_DB=app
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=changethis
 
-SENTRY_DSN=
+SENTRY_DSN=https://5f0b63e483784164ded34123ba93f34b@o185999.ingest.us.sentry.io/4507378510659584
 
 # Configure these with your own Docker registry images
 DOCKER_IMAGE_BACKEND=backend
