--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -6,3 +6,28 @@ app.egg-info
 htmlcov
 .cache
 .venv
+..idea
+.idea
+.ipynb_checkpoints
+.vscode
+.pytest_cache
+dist
+site
+coverage.xml
+.netlify
+test.db
+log.txt
+Pipfile.lock
+env3.*
+env
+docs_build
+site_build
+venv
+docs.zip
+archive.zip
+
+# vim temporary files
+*~
+.*.sw?
+# macOS
+.DS_Store
