--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ POSTGRES_DB=app
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=changethis
 
-SENTRY_DSN=https://5f0b63e483784164ded34123ba93f34b@o185999.ingest.us.sentry.io/4507378510659584
+SENTRY_DSN="https://5f0b63e483784164ded34123ba93f34b@o185999.ingest.us.sentry.io/4507378510659584"
 
 # Configure these with your own Docker registry images
 DOCKER_IMAGE_BACKEND=backend
